--- a/src/lib/tabs/tab-body/tab-body.component.html
+++ b/src/lib/tabs/tab-body/tab-body.component.html
@@ -1,5 +1,7 @@
 <ng-container *ngIf="active">
-  <div class="nd-tab-body">
+  <div
+    class="nd-tab-body"
+  >
     <ng-template [ngTemplateOutlet]="content"></ng-template>
   </div>
 </ng-container>
