--- a/src/lib/share/example-viewer/example-viewer.component.scss
+++ b/src/lib/share/example-viewer/example-viewer.component.scss
@@ -1,10 +1,8 @@
 @import "../../core/variables";
 
-.example-viewer-container {
-
-  width: 100%;
+.example-viewer {
   @media only screen and (max-width: $breakpoint-small - 1) {
-    width: 400px;
+    width: calc(100% - 10px);
   }
 
   @media only screen and (min-width: $breakpoint-small) {
@@ -12,21 +10,23 @@
   }
 
   @media only screen and (min-width: $breakpoint-medium) {
-    width: 400px;
+    width: calc(100% - 20px);
   }
 
   @media only screen and (min-width: $breakpoint-large) {
-    width: 600px;
+    width: calc(100% - 30px);
   }
 
   @media only screen and (min-width: $breakpoint-xlarge) {
-    width: 800px;
+    width: calc(100% - 40px);
   }
+}
 
-  @media only screen and (min-width: $breakpoint-xxlarge) {
-    width: 1000px;
-  }
-  margin: 10px;
+.example-viewer-container {
+
+  width: 100%;
+
+  margin: 10px 0;
 
   .example-viewer-wrapper {
     border-radius: 4px;
@@ -65,30 +65,45 @@
         transition: all .3s ease-in-out;
         letter-spacing: 4px;
         transform: scaleY(1.3) rotate(0deg);
-
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
         &:hover {
           transform: scaleY(1.3) rotate(-360deg);
+        }
+
+        span {
+          width: 10px;
+          height: 100%;
+        }
+
+        span:first-child {
+          margin-right: 5px;
+        }
+
+        span:last-child {
+          margin-left: 3px;
         }
       }
     }
 
     .example-viewer-source-container {
-      width: 100%;
+      width: calc(100% - 40px);
       align-content: center;
       align-items: center;
       display: flex;
       justify-content: center;
-
+      transition: all .5s ease-in-out;
+      padding: 20px 20px;
       iframe {
         width: 100%;
-        height: auto;
       }
     }
 
     .example-viewer-body-container {
       width: calc(100% - 40px);
       padding: 20px 20px;
-      background: #008dff;
     }
   }
 }
