--- a/src/lib/tabs/tab-header/tab-header.component.html
+++ b/src/lib/tabs/tab-header/tab-header.component.html
@@ -1,7 +1,9 @@
-<div class="nd-tab-list-container">
+<span
+  class="nd-tab-list-container"
+>
   <nd-tab-list>
     <ng-content select="nd-tab-label"></ng-content>
   </nd-tab-list>
   <ng-content select="nd-tab-ink-bar"></ng-content>
-</div>
+</span>
 
