--- a/src/lib/tabs/tab-header/tab-list/tab-list.component.scss
+++ b/src/lib/tabs/tab-header/tab-list/tab-list.component.scss
@@ -2,7 +2,6 @@
 
 .nd-tabs-position-top {
   .nd-tab-list {
-    width: inherit;
     display: inline-flex;
     flex-direction: row;
     overflow: scroll;
@@ -12,7 +11,6 @@
 
 .nd-tabs-position-bottom {
   .nd-tab-list {
-    width: inherit;
     display: inline-flex;
     flex-direction: row;
     overflow: scroll;
@@ -22,8 +20,7 @@
 
 .nd-tabs-position-left {
   .nd-tab-list {
-    width: inherit;
-    height: 100%;
+    // height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -35,8 +32,7 @@
 
 .nd-tabs-position-right {
   .nd-tab-list {
-    width: inherit;
-    height: 100%;
+    // height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
