--- a/src/lib/icons/icons.component.css
+++ b/src/lib/icons/icons.component.css
@@ -1,5 +1,9 @@
 @import "base/iconfont.css";
 
+.nd-icon-container {
+  height: 16px;
+}
+
 .nd-icon {
   font-family: "iconfont" !important;
   font-size: 16px;
